tests/language_modules/11_errors_results/invalid_semantics/result_plain_return.vf
module ResultPlainReturn

error NotFound

function load() returns Result<Integer, NotFound>
is
    return 1
end load

end ResultPlainReturn